--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!-- CopyLeft Justikail AKA 1K4lL_* -->
+<!--
+
+Github : https://github.com/justikail
+Insta  : https://instagram.com/sir.ikail
+
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
